--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "homepage": "https://github.com/terramoud/UI_kit#readme",
   "dependencies": {
-    "npm": "^6.9.0"
+    "npm": "^6.9.0",
+    "prepend-file": "^1.3.1"
   },
   "devDependencies": {
     "bemdecl-to-fs-loader": "0.0.4",
