--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/terramoud/UI_kit#readme",
   "dependencies": {
+    "inputmask": "^5.0.1",
     "jquery": "^3.4.1",
     "npm": "^6.13.4",
     "prepend-file": "^1.3.1",
